# kinova_robo_Arm_test1

./: README.md
owr_gazebo/config/: controllers.yaml
owr_gazebo/launch/: owr_control.launch  owr_spawn.launch  owr_spawn2.launch
owr_moveit_config/: CMakeLists.txt  package.xml
